--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v1
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '12'
     - name: Copy Dockerfile
       run: cp docker/rpi2/Dockerfile app/Dockerfile
     - name: Deploy to balena
