--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v1
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '12'
-    - name: Copy Dockerfile
-      run: cp docker/rpi2/Dockerfile app/Dockerfile
-    - name: Deploy to balena
-      uses: bartoszadamczyk/balena-push@v1.0.0
-      with:
-        api-token: ${{secrets.BALENA_API_TOKEN}}
-        application-name: ${{secrets.BALENA_APPLICATION_NAME}}
-        application-path: "./app"
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Copy Dockerfile
+        run: cp docker/rpi2/Dockerfile app/Dockerfile
+      - name: Balena Deploy
+        uses: bekriebel/balena-cli-action@v1
+        if: success()
+        with:
+          balena_api_token: ${{secrets.BALENA_API_TOKEN}}
+          balena_command: "deploy ${{secrets.BALENA_APPLICATION_NAME}} --logs"
