--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,27 @@ Adafruit-PlatformDetect==3.0.0
 Adafruit-PureIO==1.1.8
 appdirs==1.4.4
 black==20.8b1
+boto3==1.17.1
+botocore==1.20.1
 click==7.1.2
 flake8==3.8.4
+jmespath==0.10.0
 mccabe==0.6.1
+mypy==0.800
 mypy-extensions==0.4.3
 pathspec==0.8.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pyftdi==0.52.9
 pyserial==3.5
+python-dateutil==2.8.1
 pyusb==1.1.1
 regex==2020.11.13
 RPi.GPIO-def==0.2
+s3transfer==0.3.4
+six==1.15.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3==1.26.3
 w1thermsensor==2.0.0
