--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,3 +23,7 @@ jobs:
         run: pip install flake8
       - name: Run flake8
         run: flake8
+      - name: Install mypy
+        run: pip install mypy
+      - name: Run mypy
+        run: mypy .
