--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy Prod
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python
@@ -24,33 +25,19 @@ jobs:
         run: pip install mypy
       - name: Run mypy
         run: mypy .
-  deploy_rpi_2:
+  deploy_prod:
+    name: Deploy Prod
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - name: Checkout
         uses: actions/checkout@master
       - name: Copy Dockerfile
-        run: cp docker/rpi2/Dockerfile app/Dockerfile
+        run: cp docker/rpi4/Dockerfile app/Dockerfile
       - name: Balena Deploy
         uses: bartoszadamczyk/balena-cli-action@v1
         if: success()
         with:
           balena_api_token: ${{secrets.BALENA_API_TOKEN}}
           application_path: "app/"
-          balena_command: "push ${{secrets.BALENA_APPLICATION_NAME_RPI_2}} --logs"
-#  deploy_rpi_4:
-#    runs-on: ubuntu-latest
-#    needs: lint
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@master
-#      - name: Copy Dockerfile
-#        run: cp docker/rpi4/Dockerfile app/Dockerfile
-#      - name: Balena Deploy
-#        uses: bartoszadamczyk/balena-cli-action@v1
-#        if: success()
-#        with:
-#          balena_api_token: ${{secrets.BALENA_API_TOKEN}}
-#          application_path: "app/"
-#          balena_command: "push ${{secrets.BALENA_APPLICATION_NAME_RPI_4}} --logs"
+          balena_command: "push ${{secrets.BALENA_APPLICATION_NAME_RPI_4}} --logs"
