--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,9 +7,11 @@ on:
     branches:
       - '*'
       - '!main'
+      - '!develop'
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python
