--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install mypy
         run: pip install mypy
       - name: Run mypy
-        run: mypy .
+        run: cd app && mypy -m deamon
   deploy_prod:
     name: Deploy Prod
     runs-on: ubuntu-latest
