--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Copy Dockerfile
-        run: cp docker/rpi4/Dockerfile app/Dockerfile
+        run: cp docker/rpi4/Dockerfile .
       - name: Balena Deploy
         uses: bartoszadamczyk/balena-cli-action@v1
         if: success()
