--- a/.github/workflows/deploy_develop.yml
+++ b/.github/workflows/deploy_develop.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install mypy
         run: pip install mypy
       - name: Run mypy
-        run: cd app && mypy -m deamon
+        run: mypy -m app
   deploy_develop:
     name: Deploy Develop
     runs-on: ubuntu-latest
