--- a/.github/workflows/deploy_develop.yml
+++ b/.github/workflows/deploy_develop.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install mypy
         run: pip install mypy
       - name: Run mypy
-        run: cd app && mypy -m deamon
+        run: mypy -m app
   deploy_develop:
     name: Deploy Develop
     runs-on: ubuntu-latest
@@ -33,11 +33,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Copy Dockerfile
-        run: cp docker/rpi2/Dockerfile app/Dockerfile
+        run: cp docker/rpi2/Dockerfile .
       - name: Balena Deploy
         uses: bartoszadamczyk/balena-cli-action@v1
         if: success()
         with:
           balena_api_token: ${{secrets.BALENA_API_TOKEN}}
-          application_path: "app/"
+          application_path: "."
           balena_command: "push ${{secrets.BALENA_APPLICATION_NAME_RPI_2}} --logs"
