--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -17,12 +17,10 @@ jobs:
           architecture: x64
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Install flake8
-        run: pip install flake8
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run flake8
         run: flake8
-      - name: Install mypy
-        run: pip install mypy
       - name: Run mypy
         run: mypy .
   deploy_prod:
