--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,15 +17,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9.2
+          python-version: 3.9.4
           architecture: x64
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Install flake8
-        run: pip install flake8
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run flake8
         run: flake8
-      - name: Install mypy
-        run: pip install mypy
       - name: Run mypy
-        run: mypy -m app
+        run: mypy .
