--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ black==20.8b1
 boto3==1.17.1
 boto3-stubs==1.17.47.0
 botocore==1.20.1
+certifi==2020.12.5
 click==7.1.2
 flake8==3.8.4
 iniconfig==1.1.1
@@ -33,6 +34,7 @@ pyusb==1.1.1
 regex==2020.11.13
 RPi.GPIO-def==0.2
 s3transfer==0.3.4
+sentry-sdk==1.0.0
 six==1.15.0
 toml==0.10.2
 typed-ast==1.4.2
