--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: 3.9.4
           architecture: x64
-      - name: Checkout Repo
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Copy Dockerfile
         run: cp docker/rpi4/Dockerfile .
