--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: 3.9.4
           architecture: x64
-      - name: Checkout Repo
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Install dependencies
         run: pip install -r requirements.txt
