--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ adafruit-circuitpython-busdevice==5.0.6
 adafruit-circuitpython-dht==3.5.4
 Adafruit-PlatformDetect==3.0.0
 Adafruit-PureIO==1.1.8
+aiounittest==1.4.0
 appdirs==1.4.4
 asyncio==3.4.3
 attrs==20.3.0
@@ -29,6 +30,7 @@ pyftdi==0.52.9
 pyparsing==2.4.7
 pyserial==3.5
 pytest==6.2.2
+pytest-asyncio==0.15.0
 python-dateutil==2.8.1
 pyusb==1.1.1
 regex==2020.11.13
@@ -42,3 +44,4 @@ typing-extensions==3.7.4.3
 urllib3==1.26.3
 w1thermsensor==2.0.0
 websockets==8.1
+wrapt==1.12.1
