--- a/.github/workflows/deploy_develop.yml
+++ b/.github/workflows/deploy_develop.yml
@@ -28,7 +28,7 @@ jobs:
   deploy_develop:
     name: Deploy Develop
     runs-on: ubuntu-latest
-    needs: lint
+    needs: lint_and_test
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
