--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -28,7 +28,7 @@ jobs:
   deploy_prod:
     name: Deploy Prod
     runs-on: ubuntu-latest
-    needs: lint
+    needs: lint_and_test
     steps:
       - name: Checkout source code
         uses: actions/checkout@master
