--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -6,8 +6,8 @@ on:
       - 'main'
 
 jobs:
-  lint:
-    name: Lint
+  lint_and_test:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: 3.9.4
           architecture: x64
-      - name: Checkout Repo
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -23,12 +23,14 @@ jobs:
         run: flake8
       - name: Run mypy
         run: mypy .
+      - name: Run Pytest
+        run: pytest
   deploy_prod:
     name: Deploy Prod
     runs-on: ubuntu-latest
-    needs: lint
+    needs: lint_and_test
     steps:
-      - name: Checkout
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Copy Dockerfile
         run: cp docker/rpi4/Dockerfile .
