--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -10,8 +10,8 @@ on:
       - '!develop'
 
 jobs:
-  lint:
-    name: Lint
+  lint_and_test:
+    name: Lint and Test
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: 3.9.4
           architecture: x64
-      - name: Checkout Repo
+      - name: Checkout source code
         uses: actions/checkout@master
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -27,3 +27,5 @@ jobs:
         run: flake8
       - name: Run mypy
         run: mypy .
+      - name: Run Pytest
+        run: pytest
