Add required env var for tests

--- a/.github/workflows/deploy_develop.yml
+++ b/.github/workflows/deploy_develop.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run mypy
         run: mypy .
       - name: Run Pytest
-        run: pytest
+        run: BALENA_DEVICE_UUID='test' pytest
   deploy_develop:
     name: Deploy Develop
     runs-on: ubuntu-latest
