--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run mypy
         run: mypy .
       - name: Run Pytest
-        run: pytest
+        run: BALENA_DEVICE_UUID='test' pytest
   deploy_prod:
     name: Deploy Prod
     runs-on: ubuntu-latest
