--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/raspberrypi3-debian-python:run
+FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-python:run
 
 RUN apt-get update && apt-get upgrade \
     && apt-get install -y --no-install-recommends \
